# NeusicLabV1

./: .gitignore  AudioWorkspace.js  BitcrusherWorklet.js  CLAUDE.md  CNAME  Looper.js  README.md  Scheduler.js  Synth.js  TapeDelay.js  index.html  landing-experience.js  mobile-performance.js  mobile-system.css  neusic (3).html  neusic-agent.css  neusic-agent.js  neusic-landing.html  neusic-suite.css  neusic-suite.js  neusic__3_.html  package.json  product-home.css  site-polish.css  site-polish.js  site.webmanifest  start_neusic.py  studio-v2.html  styles.css  suite.html
.tmp/: 04-playback.b64.1  04-playback.b64.2  04-playback.b64.3  04-playback.b64.4  trigger.txt
App/: index.html
agents/: README.md  neusic_agent_server.py  requirements.txt
app/: index.html  phase-a.html
backend/: .env.example  README.md  requirements.txt
css/: 01-tokens.css  04-layout.css  05-clips.css  07-drawer-panels.css  08-overlays.css  10-browser.css  12-timeline-pro.css  60-hub-landing.css  61-landing-reskin.css  62-mobile-hotfix.css  63-mobile-final.css
docs/: LIVE_LOOP_LAB.md  NEUSICWAVE_PHASE2B_HANDOFF.md  NEUSIC_AI_COPILOT_PHASE.md  NEUSIC_PIANO_ROLL_V2.md  NEUSIC_PREMIUM_STUDIO_PHASE.md  NEUSIC_PRODUCT_BLUEPRINT.md  NEUSIC_PROFESSIONAL_ARRANGER.md  NEUSIC_RECORDING_MIX_PHASE.md  NEUSIC_REMAINING_ROADMAP.md  NEUSIC_STUDIO_V2_HYBRID.md  NEUSIC_TRACK_WORKFLOW_PHASE.md  NEUSIC_WORKSPACE_MODES.md  REPOSITORY_STRUCTURE.md  WAVE_LOOM_PRODUCTION_UPGRADE.md
native/NeusicStudio/: CMakeLists.txt  README.md
native/NeusicStudio/Source/: AudioEngine.cpp  AudioEngine.h  Main.cpp  MainComponent.cpp
(+216 files in other folders)
